--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   - pip install -e .
 
 script:
-  - py.test -v --cov=./
+  - py.test -v 
 
 # after_success:
 #   - ./tools/travis-upload-wheel.sh
